--- a/gpu_connection/.env
+++ b/gpu_connection/.env
@@ -1,2 +1,2 @@
-VENV_ACTIVATION_PATH=..\..\venv\venv_script\Scripts\activate
-MY_GPU_INSTANCE_ID=PCI\VEN_1002&DEV_67DF&SUBSYS_E3531DA2&REV_E7
+VENV_ACTIVATION_PATH=[your_venv_path]\Scripts\activate
+MY_GPU_INSTANCE_ID=PCI\HOGE&HOGEHOGE&HOGEHOGEHOGE&HOGEHOGEHOGEHOGE\0&0000000&0&00000000
